syntax = "proto2";

message Field {
  optional bytes data = 1;
}

message Row {
  repeated Field fields = 1;
}

// convert to QueryResult in constructor
message SQLResult {
  optional int32 rows_affected = 1;
  repeated string column_names = 2;
  repeated Row rows = 3;
  optional bool was_aborted = 4;
}